# Kite

./: .gitignore  CMakeLists.txt
.VSCodeCounter/2023-07-17_16-48-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
scenes/: scene.ksn
src/: Core.h  Engine.cpp  Engine.h  IDManager.h  Rect.cpp  Rect.h  Renderer.cpp  Renderer.h  Runtime.cpp  Runtime.h  Vector.h  Window.cpp  Window.h  functions.h  main.cpp
src/Components/: Component.h  IDComponent.cpp  IDComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.h
src/Entities/: Entity.cpp  Entity.h  Player.cpp
src/Events/: EventManager.cpp  EventManager.h
src/GUI/: ConsoleGUI.cpp  ConsoleGUI.h  EntityListGUI.h  GUIWindow.h  MainViewportGUI.cpp  MainViewportGUI.h  PropertiesGUI.cpp  PropertiesGUI.h  SpriteComponentGUI.cpp  SpriteComponentGUI.h  TransformComponentGUI.cpp  TransformComponentGUI.h
src/Game/: Game.cpp  Game.h  Player.cpp  Player.h
src/Layers/: GameLayer.cpp  GameLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h
src/Scene/: Player.cpp  Player.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
